src/admin.scss
@import "breakpoints-mixin.scss";

/* Make interface full-width/full-height */
#wpcontent {
	padding-left: 0 !important;
	padding-right: 0 !important;
	position: relative;
	background-color: #4F4F4F;

	.quotes-dlx-plugin {
		margin: 0;
	}
}

#wpbody-content {
	padding: 0;
	margin: 0;
}

#wpfooter {
	display: none;
}

.has-admin-container-body-wrapper {
	background: #FFF;
}

$link_color: #2c3a95;
$link_color_hover: darken( #2c3a95, 15% );
.has-form-wrapper {
	position: relative;
	padding: 0;
	margin: 0;

	header {
		background: #4F4F4F;
	}
	.has-admin-container-body {
		max-width: 69.5rem;
		margin: 0 auto;
		padding: 2.4em 0;
	}
	.has-admin-container-wrap {
		display: grid;
		grid-template-columns: 1fr;
		grid-column-gap: 1.975rem;
		align-items: center;
		padding: 1.5rem;
		max-width: 69.5rem;
		margin: 0 auto;
		text-align: right;

		@include respond-to('small') {
			grid-template-columns: 1fr 175px;
		}

		@include respond-to('medium') {
			grid-template-columns: 1fr 250px;
		}

		@include respond-to('large') {
			grid-template-columns: 1fr 250px;
		}

		h2 {
			padding: 0;
			margin: 0;
		}
	}

	.has-logo-wrapper {
		text-align: left;
		
		img {
			max-width: 100%;
			height: auto;
		}

	}
	
	.header__btn-wrap {
		@include respond-to('small') {
			margin-top: 0;
		}

	}

	.has-admin-preview {

		li {
			display: list-item;
			margin: 0;
			padding: 0;
			margin-bottom:5px;
		}

		a {
			display: inline-block;
			position: relative;
			color: $link_color;
			transition: all .3s ease-in-out;
			text-decoration: none;

			&:after {
				transition: all .3s ease-in-out;
				display: inline-block;
				opacity: 0;
				position: absolute;
				bottom: -5px;
				left: 0;
				content: '';
				width: 100%;
				height: 2px;
				background: $link_color_hover;
			}

			&:hover {
				color: $link_color_hover;
				&:after {
					opacity: 1;
					
				}
			}
		}
		
	}
}

/* Button styles stolen from QuotesDLX */
.header__btn-wrap {
	display: flex;
	justify-content: flex-end;
	flex-wrap: wrap;
	max-width: 100%;
	margin-top: 15px;

	@include respond-to('small') {
		max-width: 250px;
		margin-top: 0;
	}

	@include respond-to('medium') {
		max-width: 250px;
		margin-top: 0;
	}

	@include respond-to('large') {
		max-width: 250px;
		margin-top: 0;
	}

	
	&.left,
	&.right,
	&.center {
		display: flex;
	}
	&.left {
		justify-content: flex-start;
	}
	&.center {
		justify-content: center;
	}
	&.right {
		justify-content: flex-end;
	}
	button,
	.has__btn-primary {
		width: 100%;
		text-align: center;
		margin-bottom: 0px;
		border-radius: 2px;
		font-size: 1.3em;
		display: inline-block;
		background: #FFF;
		color: #4F4F4F;
		border: 2px solid #4F4F4F;
		padding: 10px 20px;
		cursor: pointer;
		transition: all 0.4s ease-in-out;
		text-decoration: none;;

		&:not([disabled]):hover {
			border-radius: 2px;
			background: #4F4F4F;
			color: #FFF;
			border-color: #FFF;
			text-decoration: none;
			transition: all 0.4s ease-in-out;
		}
	}
	.has__btn-primary {
		display: block;
		width: 100%;

		margin-bottom: 15px;

		&:last-child {
			margin-bottom: 0;
		}
	}
}

.has-admin-container-footer {

	footer {
		background: #4f4f4f;
	}

	.has-admin-container-wrap {
		display: flex;
		flex-wrap: wrap;
		justify-content: center;
		margin: 0 auto;
		max-width: 275px;
		margin: 0 auto;
		padding: 4.0em 0;
	}

	.footer-rate-icon,
	.has-plea {
		display: block;
		font-style: italic;
		color: #FFF;
	}
	.has__btn-primary {
		display: block;
		width: 100%;
		text-align: center;
		margin-bottom: 0px;
		border-radius: 2px;
		font-size: 1.3em;
		line-height: 1.35em;
		background: #F08EA5;
		color: #FFF;
		border: 2px solid #F5A4B7;
		padding: 10px 20px;
		cursor: pointer;
		transition: all 0.4s ease-in-out;
		text-decoration: none;
		margin-top: 18px;
		margin-bottom: 18px;

		&:not([disabled]):hover {
			border-radius: 2px;
			background: #4F4F4F;
			color: #FFF;
			border-color: #F08EA5;
			text-decoration: none;
			transition: all 0.4s ease-in-out;
		}
	}
}

